--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+## Ignores for unity projects
+*.pidb
+*.userprefs
+
+
+####################################
+## Ignores from github #############
+####################################
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
