--- a/JUUT/JUUT.csproj
+++ b/JUUT/JUUT.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\ClassSetUpAttribute.cs" />
+    <Compile Include="Attributes\ClassTearDownAttribute.cs" />
     <Compile Include="Attributes\JUUTTestAttribute.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
