--- a/JUUT/JUUT.csproj
+++ b/JUUT/JUUT.csproj
@@ -39,13 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssertException.cs" />
     <Compile Include="Attributes\ClassSetUpAttribute.cs" />
     <Compile Include="Attributes\ClassTearDownAttribute.cs" />
     <Compile Include="Attributes\SimpleTestAttribute.cs" />
     <Compile Include="Attributes\TestTearDownAttribute.cs" />
     <Compile Include="Attributes\TestSetUpAttribute.cs" />
     <Compile Include="Attributes\JUUTTestAttribute.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="Assert.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
