--- a/TestJUUT/TestJUUT.csproj
+++ b/TestJUUT/TestJUUT.csproj
@@ -59,6 +59,8 @@
     <Compile Include="AssertEx.cs" />
     <Compile Include="TestAttributes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestAssert.cs" />
+    <Compile Include="TestAssertException.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\JUUT\JUUT.csproj">
