--- a/JUUT/JUUT.csproj
+++ b/JUUT/JUUT.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Attributes\JUUTTestAttribute.cs" />
     <Compile Include="Assert.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleTestReport.cs" />
     <Compile Include="TestReport.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
