--- a/JUUT/JUUT.csproj
+++ b/JUUT/JUUT.csproj
@@ -36,13 +36,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\AbstractTestReporter.cs" />
     <Compile Include="Core\Impl\AssertException.cs" />
     <Compile Include="Core\Impl\Attributes\ClassSetUpAttribute.cs" />
     <Compile Include="Core\Impl\Attributes\ClassTearDownAttribute.cs" />
@@ -51,6 +47,7 @@
     <Compile Include="Core\Impl\Attributes\TestSetUpAttribute.cs" />
     <Compile Include="Core\Impl\Attributes\JUUTTestAttribute.cs" />
     <Compile Include="Core\Impl\Assert.cs" />
+    <Compile Include="Core\TestReporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Impl\SimpleTestReport.cs" />
     <Compile Include="Core\TestReport.cs" />
