--- a/JUUT/JUUT.csproj
+++ b/JUUT/JUUT.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Core\Impl\Attributes\TestTearDownAttribute.cs" />
     <Compile Include="Core\Impl\Attributes\TestSetUpAttribute.cs" />
     <Compile Include="Core\Impl\Attributes\JUUTTestAttribute.cs" />
-    <Compile Include="Core\Impl\Assert.cs" />
+    <Compile Include="Core\Assert.cs" />
     <Compile Include="Core\TestReporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Impl\SimpleTestReport.cs" />
