--- a/JUUT/JUUT.csproj
+++ b/JUUT/JUUT.csproj
@@ -42,12 +42,14 @@
     <Compile Include="Core\Impl\AssertException.cs" />
     <Compile Include="Core\Impl\Attributes\ClassSetUpAttribute.cs" />
     <Compile Include="Core\Impl\Attributes\ClassTearDownAttribute.cs" />
-    <Compile Include="Core\Impl\Attributes\SimpleTestAttribute.cs" />
+    <Compile Include="Core\Impl\Attributes\SimpleTestMethodAttribute.cs" />
     <Compile Include="Core\Impl\Attributes\TestTearDownAttribute.cs" />
     <Compile Include="Core\Impl\Attributes\TestSetUpAttribute.cs" />
-    <Compile Include="Core\Impl\Attributes\JUUTTestAttribute.cs" />
+    <Compile Include="Core\Impl\Attributes\JUUTTestClassAttribute.cs" />
     <Compile Include="Core\Assert.cs" />
+    <Compile Include="Core\Impl\SimpleTestRunner.cs" />
     <Compile Include="Core\TestReporter.cs" />
+    <Compile Include="Core\TestRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Impl\SimpleTestReport.cs" />
     <Compile Include="Core\TestReport.cs" />
