--- a/JUUT/JUUT.csproj
+++ b/JUUT/JUUT.csproj
@@ -38,7 +38,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\AbstractTestReporter.cs" />
+    <Compile Include="Core\Impl\Reports\AbstractReport.cs" />
+    <Compile Include="Core\Impl\AbstractTestReporter.cs" />
     <Compile Include="Core\Impl\AssertException.cs" />
     <Compile Include="Core\Impl\Attributes\ClassSetUpAttribute.cs" />
     <Compile Include="Core\Impl\Attributes\ClassTearDownAttribute.cs" />
@@ -51,8 +52,8 @@
     <Compile Include="Core\TestReporter.cs" />
     <Compile Include="Core\TestRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Core\Impl\SimpleTestReport.cs" />
-    <Compile Include="Core\TestReport.cs" />
+    <Compile Include="Core\Impl\Reports\TestMethodReport.cs" />
+    <Compile Include="Core\Report.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
