--- a/TestJUUT/TestJUUT.csproj
+++ b/TestJUUT/TestJUUT.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestAssert.cs" />
     <Compile Include="TestAssertException.cs" />
+    <Compile Include="TestTestClassReport.cs" />
     <Compile Include="TestTestMethodTestReport.cs" />
     <Compile Include="TestAbstractTestReporter.cs" />
     <Compile Include="TestTestClassRunner.cs" />
