--- a/JUUT/JUUT.csproj
+++ b/JUUT/JUUT.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Core\Assert.cs" />
     <Compile Include="Core\Impl\Reports\TestClassReport.cs" />
     <Compile Include="Core\Impl\SimpleTestRunner.cs" />
+    <Compile Include="Core\TestClassScanner.cs" />
     <Compile Include="Core\TestReporter.cs" />
     <Compile Include="Core\TestRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
