Added abstract superclass JUUTAttribute for all attributes.
Added methods to get the name of an attribute and if it is a SetUp or
TearDown attribute. Adjusted the test for the attributes.

--- a/JUUT/JUUT.csproj
+++ b/JUUT/JUUT.csproj
@@ -38,15 +38,16 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Attributes\ClassSetUpAttribute.cs" />
+    <Compile Include="Core\Attributes\ClassTearDownAttribute.cs" />
+    <Compile Include="Core\Attributes\JUUTAttribute.cs" />
+    <Compile Include="Core\Attributes\JUUTTestClassAttribute.cs" />
+    <Compile Include="Core\Attributes\SimpleTestMethodAttribute.cs" />
+    <Compile Include="Core\Attributes\TestSetUpAttribute.cs" />
+    <Compile Include="Core\Attributes\TestTearDownAttribute.cs" />
     <Compile Include="Core\Impl\Reports\AbstractReport.cs" />
     <Compile Include="Core\Impl\AbstractTestReporter.cs" />
     <Compile Include="Core\Impl\AssertException.cs" />
-    <Compile Include="Core\Impl\Attributes\ClassSetUpAttribute.cs" />
-    <Compile Include="Core\Impl\Attributes\ClassTearDownAttribute.cs" />
-    <Compile Include="Core\Impl\Attributes\SimpleTestMethodAttribute.cs" />
-    <Compile Include="Core\Impl\Attributes\TestTearDownAttribute.cs" />
-    <Compile Include="Core\Impl\Attributes\TestSetUpAttribute.cs" />
-    <Compile Include="Core\Impl\Attributes\JUUTTestClassAttribute.cs" />
     <Compile Include="Core\Assert.cs" />
     <Compile Include="Core\Impl\Reports\TestClassReport.cs" />
     <Compile Include="Core\Impl\SimpleTestRunner.cs" />
