--- a/TestJUUT/TestJUUT.csproj
+++ b/TestJUUT/TestJUUT.csproj
@@ -69,6 +69,7 @@
     <Compile Include="TestTestMethodTestReport.cs" />
     <Compile Include="TestAbstractTestReporter.cs" />
     <Compile Include="TestTestClassRunner.cs" />
+    <Compile Include="TestReportRange.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\JUUT\JUUT.csproj">
