--- a/TestJUUT/TestJUUT.csproj
+++ b/TestJUUT/TestJUUT.csproj
@@ -60,7 +60,15 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AssertEx.cs" />
-    <Compile Include="TestAttributes.cs" />
+    <Compile Include="AttributeTests\TestSimpleTestMethodAttribute.cs" />
+    <Compile Include="AttributeTests\TestTestTearDownAttribute.cs" />
+    <Compile Include="AttributeTests\TestTestSetUpAttribute.cs" />
+    <Compile Include="AttributeTests\TestClassTearDownAttribute.cs" />
+    <Compile Include="AttributeTests\TestClassSetUpAttribute.cs" />
+    <Compile Include="AttributeTests\TestJUUTAttribute.cs" />
+    <Compile Include="AttributeTests\TestJUUTTestClass.cs" />
+    <Compile Include="Util\TestClassMock.cs" />
+    <Compile Include="Util\NotAttributedMock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestAssert.cs" />
     <Compile Include="TestAssertException.cs" />
