Implemented the validation delegate in ClassSetUpAttribute.

--- a/TestJUUT/TestJUUT.csproj
+++ b/TestJUUT/TestJUUT.csproj
@@ -78,6 +78,8 @@
     <Compile Include="TestAbstractTestReporter.cs" />
     <Compile Include="TestTestClassRunner.cs" />
     <Compile Include="TestReportRange.cs" />
+    <Compile Include="Util\TestClassWithNonStaticClassSetUp.cs" />
+    <Compile Include="Util\TestClassWithOrganizeMethodsWithParameters.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\JUUT\JUUT.csproj">
