--- a/TestJUUT/TestJUUT.csproj
+++ b/TestJUUT/TestJUUT.csproj
@@ -59,7 +59,6 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="AssertEx.cs" />
     <Compile Include="AttributeTests\TestSimpleTestMethodAttribute.cs" />
     <Compile Include="AttributeTests\TestTestTearDownAttribute.cs" />
     <Compile Include="AttributeTests\TestTestSetUpAttribute.cs" />
@@ -67,17 +66,18 @@
     <Compile Include="AttributeTests\TestClassSetUpAttribute.cs" />
     <Compile Include="AttributeTests\TestJUUTAttribute.cs" />
     <Compile Include="AttributeTests\TestJUUTTestClass.cs" />
+    <Compile Include="TestCore\TestAssert.cs" />
+    <Compile Include="TestCore\TestAssertException.cs" />
+    <Compile Include="TestReports\TestReportRange.cs" />
+    <Compile Include="TestReports\TestTestClassReport.cs" />
+    <Compile Include="TestReports\TestTestMethodReport.cs" />
+    <Compile Include="Util\AssertEx.cs" />
     <Compile Include="Util\TestClassMock.cs" />
     <Compile Include="Util\NotAttributedMock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestAssert.cs" />
-    <Compile Include="TestAssertException.cs" />
-    <Compile Include="TestTestClassReport.cs" />
     <Compile Include="TestTestClassScanner.cs" />
-    <Compile Include="TestTestMethodTestReport.cs" />
     <Compile Include="TestAbstractTestReporter.cs" />
     <Compile Include="TestTestClassRunner.cs" />
-    <Compile Include="TestReportRange.cs" />
     <Compile Include="Util\TestClassWithNonStaticClassOrganizeMethods.cs" />
     <Compile Include="Util\TestClassWithMethodsWithParameters.cs" />
   </ItemGroup>
@@ -87,6 +87,7 @@
       <Name>JUUT</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
