--- a/TestJUUT/TestJUUT.csproj
+++ b/TestJUUT/TestJUUT.csproj
@@ -68,8 +68,8 @@
     <Compile Include="AttributeTests\TestJUUTTestClass.cs" />
     <Compile Include="TestCore\TestAssert.cs" />
     <Compile Include="TestCore\TestAssertException.cs" />
-    <Compile Include="TestReports\TestTestClassReport.cs" />
-    <Compile Include="TestReports\TestTestMethodReport.cs" />
+    <Compile Include="TestReports\TestClassReport.cs" />
+    <Compile Include="TestReports\TestMethodReport.cs" />
     <Compile Include="TestReports\TestReportStatus.cs" />
     <Compile Include="Util\AssertEx.cs" />
     <Compile Include="Util\TestClassMock.cs" />
