--- a/TestJUUT/TestJUUT.csproj
+++ b/TestJUUT/TestJUUT.csproj
@@ -77,7 +77,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestTestClassScanner.cs" />
     <Compile Include="TestAbstractTestReporter.cs" />
-    <Compile Include="TestTestClassRunner.cs" />
+    <Compile Include="TestSimpleTestClassRunner.cs" />
     <Compile Include="Util\TestClassWithNonStaticClassOrganizeMethods.cs" />
     <Compile Include="Util\TestClassWithMethodsWithParameters.cs" />
   </ItemGroup>
