--- a/JUUT/JUUT_Core.csproj
+++ b/JUUT/JUUT_Core.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Core\Attributes\Methods\TestTearDownAttribute.cs" />
     <Compile Include="Core\Assert.cs" />
     <Compile Include="Core\Reporters\AbstractTestReporter.cs" />
+    <Compile Include="Core\Reporters\ConsoleReporter.cs" />
     <Compile Include="Core\Reporters\TestReporter.cs" />
     <Compile Include="Core\Reports\ClassReport.cs" />
     <Compile Include="Core\Reports\SimpleClassReport.cs" />
@@ -61,10 +62,9 @@
     <Compile Include="Core\Suites\AbstractTestSuite.cs" />
     <Compile Include="Core\Suites\TestSuite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Unity\UnityTestReporter.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Unity\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
