Reorganized project structure.

--- a/JUUT/TestJUUT/TestJUUT.csproj
+++ b/JUUT/TestJUUT/TestJUUT.csproj
@@ -84,7 +84,7 @@
     <Compile Include="Util\TestClassWithMethodsWithParameters.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\JUUT\JUUT_Core.csproj">
+    <ProjectReference Include="..\JUUT_Core\JUUT_Core.csproj">
       <Project>{6a2fd2d8-1d16-44d3-b861-90503bd2d569}</Project>
       <Name>JUUT_Core</Name>
     </ProjectReference>
