--- a/JUUT/JUUT_Core/JUUT_Core.csproj
+++ b/JUUT/JUUT_Core/JUUT_Core.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Suites\AbstractTestSuite.cs" />
     <Compile Include="Suites\TestSuite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
