--- a/JUUT/JUUT_Core/JUUT_Core.csproj
+++ b/JUUT/JUUT_Core/JUUT_Core.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Runners\SimpleTestRunner.cs" />
     <Compile Include="Runners\TestRunner.cs" />
     <Compile Include="Scanners\TestClassScanner.cs" />
+    <Compile Include="Sessions\TestClassSession.cs" />
     <Compile Include="Suites\AbstractTestSuite.cs" />
     <Compile Include="Suites\TestSuite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
