Added a class for the menu in Unity.

--- a/UnitySamply/UnitySample.csproj
+++ b/UnitySamply/UnitySample.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\StandardAssets\Editor\JUUTUnityMenu.cs" />
     <Compile Include="Assets\Tests\JUUT\TestStarter.cs" />
     <Compile Include="Assets\Tests\TestSample.cs" />
   </ItemGroup>
