--- a/JUUT/TestJUUT/TestJUUT.csproj
+++ b/JUUT/TestJUUT/TestJUUT.csproj
@@ -73,6 +73,7 @@
     <Compile Include="TestReports\TestReportStatus.cs" />
     <Compile Include="TestAbstractTestSuite.cs" />
     <Compile Include="TestSessions\TestTestClassSession.cs" />
+    <Compile Include="TestSessions\TestSession.cs" />
     <Compile Include="Util\AssertEx.cs" />
     <Compile Include="Util\TestClassMock.cs" />
     <Compile Include="Util\NotAttributedMock.cs" />
