--- a/JUUT/JUUT_Core/JUUT_Core.csproj
+++ b/JUUT/JUUT_Core/JUUT_Core.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Reports\MethodReport.cs" />
     <Compile Include="Runners\SimpleTestRunner.cs" />
     <Compile Include="Runners\TestRunner.cs" />
+    <Compile Include="Scanners\AssemblyScanner.cs" />
     <Compile Include="Scanners\TestClassScanner.cs" />
     <Compile Include="Sessions\Session.cs" />
     <Compile Include="Sessions\TestClassSession.cs" />
