--- a/JUUT/TestJUUT/TestJUUT.csproj
+++ b/JUUT/TestJUUT/TestJUUT.csproj
@@ -73,6 +73,7 @@
     <Compile Include="TestReports\TestMethodReport.cs" />
     <Compile Include="TestReports\TestReportStatus.cs" />
     <Compile Include="TestAbstractTestSuite.cs" />
+    <Compile Include="TestRunners\TestCollectingTestRunner.cs" />
     <Compile Include="TestScanners\TestAssemblyScanner.cs" />
     <Compile Include="TestSessions\TestTestClassSession.cs" />
     <Compile Include="TestSessions\TestSession.cs" />
@@ -82,7 +83,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestScanners\TestTestClassScanner.cs" />
     <Compile Include="TestReporters\TestAbstractTestReporter.cs" />
-    <Compile Include="TestSimpleTestClassRunner.cs" />
+    <Compile Include="TestRunners\TestSimpleTestClassRunner.cs" />
+    <Compile Include="Util\TestClassTarget.cs" />
     <Compile Include="Util\TestClassWithNonStaticClassOrganizeMethods.cs" />
     <Compile Include="Util\TestClassWithMethodsWithParameters.cs" />
     <Compile Include="Util\TestClassWithTestAfterMethod.cs" />
