--- a/JUUT/JUUT_Unity/JUUT_Unity.csproj
+++ b/JUUT/JUUT_Unity/JUUT_Unity.csproj
@@ -40,6 +40,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Click.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnityTestReporter.cs" />
     <Compile Include="UnityTestSuite.cs" />
