--- a/UnitySamply/Assembly-CSharp.csproj
+++ b/UnitySamply/Assembly-CSharp.csproj
@@ -44,6 +44,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\SphereScript.cs" />
      <Compile Include="Assets\Tests\JUUT\TestStarter.cs" />
      <Compile Include="Assets\Tests\TestSample.cs" />
  <Reference Include="JUUT_Core">
