--- a/UnitySamply/UnitySample.csproj
+++ b/UnitySamply/UnitySample.csproj
@@ -48,8 +48,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Tests\JUUT\JUUTUnityUtil.cs" />
     <Compile Include="Assets\Scripts\SphereScript.cs" />
-    <Compile Include="Assets\StandardAssets\Editor\JUUTUnityMenu.cs" />
+    <Compile Include="Assets\Editor\JUUTUnityMenu.cs" />
     <Compile Include="Assets\Tests\JUUT\TestStarter.cs" />
     <Compile Include="Assets\Tests\TestSample.cs" />
   </ItemGroup>
